--- a/frontend/home.html
+++ b/frontend/home.html
@@ -40,7 +40,7 @@
             <a class="nav-link" id="user-name" href="#">NotLogged</a>
           </li>
           <li class="nav-item">
-            <a id="logout" class="nav-link" href="#">Salir</a>
+            <a id="logout" class="nav-link" href="">Salir</a>
           </li>
         </ul>
       </div>
